# Storyrus

./: .gitignore  Apresentacao_Cliente_Plataforma_Historias.docx  Arquitetura_Implementacao_Plataforma_Historias.docx  Arquitetura_Tecnica_Plataforma_Historias.docx  DEPLOY.md  Makefile  README.md  apply-changes.bat  build-check.bat  docker-compose.yml  git-commit.bat  git-push.bat  prompt_geracao_historias.md  render.yaml  run_book.py  run_books4.py  run_books4_fix.py  run_books5.py  run_covers.py  run_example.py  run_mar6.py  vercel.json
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-api.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_project_theme.py  0003_child_name_dedication.py  0004_project_language.py  0005_project_child_age.py  0006_project_extra_characters.py  0007_project_learning_profile.py  0008_project_extra_theme.py
backend/app/: config.py  database.py  deps.py  main.py  models.py  queue.py  schemas.py  security.py  storage.py  story_import.py
backend/app/ai_clients/: __init__.py  base.py  factory.py  image_nano_banana.py  text_anthropic.py  video_kling.py
backend/app/routers/: auth.py  credits.py  jobs.py  projects.py  webhooks.py
backend/app/services/: credits.py  jobs.py
backend/app/workers/: ebook.py  handlers.py  runner.py
backend/scripts/: demo_flow.py  fetch_fonts.py  seed.py
backend/tests/: conftest.py  test_api.py  test_workers.py
livro_menino2/: historia.txt  log.json
livros5/: livro-1.txt  livro-2.txt  livro-3.txt  livro-4.txt  livro-5.txt  log.json
(+34 files in other folders)
